# FlyFlirt

./: CITATION.cff  CONTRIBUTING.md  FlyFlirt.gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
src/docs/: configuration.md  index.md  usage_guide.md
src/flyflirt/: __init__.py  app.py  cli.py
